--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,11 @@
     <groupId>com.chenshuhong.springcloud</groupId>
     <artifactId>microservicecloud</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <!--子模块-->
+    <modules>
+        <module>microservicecloud-api</module>
+        <module>microservicecloud-provider-dept-8001</module>
+    </modules>
 
     <packaging>pom</packaging>
 
