--- a/microservicecloud-provider-dept-8001/src/main/resources/application.yaml
+++ b/microservicecloud-provider-dept-8001/src/main/resources/application.yaml
@@ -31,8 +31,9 @@ eureka:
     instance-id: microservicecloud-dept8001
     prefer-ip-address: true     #访问路径可以显示IP地址
 
+# eureka服务器访问info，显示的信息
 info:
-  app.name: atguigu-microservicecloud
-  company.name: www.atguigu.com
+  app.name: chenshuhong-microservicecloud
+  company.name: www.chenshuhong.com
   build.artifactId: $project.artifactId$
   build.version: $project.version$
